--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,17 @@
 <div class="wrapper">
   <header class="header">
     <nav class="navbar">
+      <ul>
+        <li>
+          <a routerLink="/">Home</a>
+        </li>
+        <li>
+          <a routerLink="/admin">Admin</a>
+        </li>
+      </ul>
       <div class="navbar-brand">
               <img alt="Wypożyczalnia" src="assets/images/logo.png"/>
+
               </div>
          </nav>
     <div class="header-title">
@@ -12,3 +21,5 @@
     </div>
   </header>
 </div>
+
+
