--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,5 @@
 <!--
 <router-outlet></router-outlet>
 -->
-<app-main-content></app-main-content>
+<router-outlet> </router-outlet>
 <app-footer></app-footer>
