--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,6 +1,6 @@
 <div class="message">
   <p *ngFor="let message of messageService.messages" class="message ">
-    {{message}}
+    {{message.messageContent}}
   </p>
 
   </div>
